Add local Maven proof packaging